--- a/drb-day/app/src/main/AndroidManifest.xml
+++ b/drb-day/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ListSlidesActivity"
+            android:name=".ui.ListSlidesActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
