--- a/drb-day/app/build.gradle
+++ b/drb-day/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
 
     compile 'com.google.code.gson:gson:2.6.2'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
